# mcp-aws-dev

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: python.mdc
.github/workflows/: build.yml  unit-tests-pr.yml
docs/: instructions.md
mcp_aws_dev/: Dockerfile  context.py  dynamodb_schema.py  knowledge_base.py  schema.py  script_runner.py  server.py
tests/: conftest.py  test_dynamodb_schema.py  test_knowledge_bases.py  test_real.py  test_schema.py  test_script_runner.py
